# amp-embedded-infra-lib

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .gitattributes  .gitignore  .ls-lint.yml  .mega-linter.yml  .secretlintignore  .travis.yml  .trivyignore  404.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  LICENSE  LICENSE.md  MAINTAINERS.md  NOTICE  NOTICE.md  README.md  SECURITY.md  antora-playbook-branch.yml  antora-playbook-site.yml  antora-playbook.yml  index.html  mull.yml  release-please-config.json  search-index.js  sitemap.xml  sonar-project.properties
examples/: CMakeLists.txt
examples/http/: CMakeLists.txt  Server.cpp
examples/http_server/: CMakeLists.txt  Main.cpp  MainBsd.cpp  MainUnix.cpp  MainWin.cpp  TimeHttpPage.cpp  TimeHttpPage.hpp
examples/https/: CMakeLists.txt  Client.cpp
examples/https_client/: CMakeLists.txt  MainWin.cpp
examples/mdns/: CMakeLists.txt  Client.cpp  Server.cpp
examples/network_example/: CMakeLists.txt  MainUnix.cpp  MainWin.cpp  Network.hpp
examples/rpc/: CMakeLists.txt  Console.proto  Server.cpp
examples/serial_net/: CMakeLists.txt  Main.cpp  MainWin.cpp
examples/serial_output/: CMakeLists.txt  Main.cpp  MainUnix.cpp
examples/sntp/: CMakeLists.txt  Client.cpp
examples/sntp_client/: CMakeLists.txt  MainWin.cpp
examples/threading/: CMakeLists.txt  Main.cpp
examples/versioning/: CMakeLists.txt  Main.c  main.c  main.cpp
examples/websocket_client/: CMakeLists.txt  Client.cpp
hal/: CMakeLists.txt
hal/bsd/: CMakeLists.txt  TimerServiceBsd.cpp  TimerServiceBsd.hpp
hal/generic/: CMakeLists.txt  FileSystemGeneric.cpp  FileSystemGeneric.hpp  SerialCommunicationConsole.cpp  SerialCommunicationConsole.hpp  SynchronousRandomDataGeneratorGeneric.cpp  SynchronousRandomDataGeneratorGeneric.hpp  SynchronousUartGeneric.cpp  SynchronousUartGeneric.hpp  TimeKeeperGeneric.cpp  TimeKeeperGeneric.hpp  TimerServiceGeneric.cpp  TimerServiceGeneric.hpp  UartGeneric.cpp  UartGeneric.hpp  UartWindows.cpp  UartWindows.hpp
hal/interfaces/: AdcMultiChannel.hpp  AnalogToDigitalPin.hpp  AsyncGpio.cpp  AsyncGpio.hpp  BackupRam.hpp  BleDtm.hpp  CMakeLists.txt  Can.cpp  Can.hpp  CommunicationConfigurator.hpp  Dac.hpp  DigitalToAnalogPin.hpp  Ethernet.cpp  Ethernet.hpp  FileSystem.cpp  FileSystem.hpp  Flash.cpp  Flash.hpp  FlashHeterogeneous.cpp  FlashHeterogeneous.hpp  FlashHomogeneous.cpp  FlashHomogeneous.hpp  FlashId.hpp  FlashStatelessStub.cpp  FlashStatelessStub.hpp  Gpio.cpp  Gpio.hpp  I2c.cpp  I2c.hpp  I2cRegisterAccess.cpp  I2cRegisterAccess.hpp  MacAddress.cpp  MacAddress.hpp  PulseWidthModulation.hpp  QuadSpi.cpp  QuadSpi.hpp  RandomDataGenerator.hpp  Reset.hpp  SerialCommunication.cpp  SerialCommunication.hpp  (+6 more)
hal/synchronous_interfaces/: CMakeLists.txt  SynchronousEncryptor.hpp  SynchronousFlash.cpp  SynchronousFlash.hpp  SynchronousFlashHomogeneous.cpp  SynchronousFlashHomogeneous.hpp  SynchronousFlashId.hpp  SynchronousGpio.hpp  SynchronousI2c.hpp  SynchronousQuadSpi.hpp  SynchronousRandomDataGenerator.hpp  SynchronousSerialCommunication.hpp  SynchronousSpi.cpp  SynchronousSpi.hpp  TimeKeeper.hpp  TimeService.hpp
hal/unix/: CMakeLists.txt  SynchronousUartUnix.cpp  SynchronousUartUnix.hpp  UartUnix.cpp  UartUnix.hpp  UartUnixBase.cpp  UartUnixBase.hpp
hal/windows/: CMakeLists.txt  FileSystemWin.cpp  FileSystemWin.hpp  SynchronousRandomDataGeneratorWin.cpp  SynchronousRandomDataGeneratorWin.hpp  SynchronousUartWindows.cpp  SynchronousUartWindows.hpp  TimerServiceWin.cpp  TimerServiceWin.hpp  UartPortFinder.cpp  UartPortFinder.hpp  UartWindows.cpp  UartWindows.hpp
infra/: CMakeLists.txt
infra/event/: AtomicTriggerScheduler.cpp  AtomicTriggerScheduler.hpp  CMakeLists.txt  ClaimableResource.cpp  ClaimableResource.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventDispatcherThreadAware.cpp  EventDispatcherThreadAware.hpp  EventDispatcherWithWeakPtr.cpp  EventDispatcherWithWeakPtr.hpp  LowPowerEventDispatcher.cpp  LowPowerEventDispatcher.hpp  QueueForOneReaderOneIrqWriter.cpp  QueueForOneReaderOneIrqWriter.hpp  SystemStateManager.cpp  SystemStateManager.hpp
infra/stream/: AtomicByteDeque.cpp  AtomicByteDeque.hpp  AtomicByteQueue.cpp  AtomicByteQueue.hpp  BoundedDequeInputStream.cpp  BoundedDequeInputStream.hpp  BoundedDequeOutputStream.cpp  BoundedDequeOutputStream.hpp  BoundedVectorInputStream.cpp  BoundedVectorInputStream.hpp  BoundedVectorOutputStream.cpp  BoundedVectorOutputStream.hpp  BufferingStreamReader.cpp  BufferingStreamReader.hpp  BufferingStreamWriter.cpp  BufferingStreamWriter.hpp  ByteInputStream.cpp  ByteInputStream.hpp  ByteOutputStream.cpp  ByteOutputStream.hpp  CMakeLists.txt  ConstructBinStream.cpp  ConstructBinStream.hpp  CountingInputStream.cpp  CountingInputStream.hpp  CountingOutputStream.cpp  CountingOutputStream.hpp  FilesystemStreaming.hpp  Flushable.hpp  Formatter.cpp  Formatter.hpp  InputStream.cpp  InputStream.hpp  IoOutputStream.cpp  IoOutputStream.hpp  LimitedInputStream.cpp  LimitedInputStream.hpp  LimitedOutputStream.cpp  LimitedOutputStream.hpp  OutputStream.cpp  (+27 more)
infra/syntax/: Asn1.cpp  Asn1.hpp  Asn1Formatter.cpp  Asn1Formatter.hpp  CMakeLists.txt  CppFormatter.cpp  CppFormatter.hpp  EscapeCharacterHelper.cpp  EscapeCharacterHelper.hpp  Json.cpp  Json.hpp  JsonFileReader.cpp  JsonFileReader.hpp  JsonFormatter.cpp  JsonFormatter.hpp  JsonInputStream.cpp  JsonInputStream.hpp  JsonObjectNavigator.cpp  JsonObjectNavigator.hpp  JsonStreamingParser.cpp  JsonStreamingParser.hpp  ProtoFormatter.cpp  ProtoFormatter.hpp  ProtoParser.cpp  ProtoParser.hpp  XmlFormatter.cpp  XmlFormatter.hpp  XmlNavigator.cpp  XmlNavigator.hpp
infra/timer/: CMakeLists.txt  DerivedTimerService.cpp  DerivedTimerService.hpp  PartitionedTime.cpp  PartitionedTime.hpp  Retry.hpp  RetryPolicy.cpp  RetryPolicy.hpp  ScalableDerivedTimerService.cpp  ScalableDerivedTimerService.hpp  StreamTime.cpp  StreamTime.hpp  TimeStreaming.cpp  (+21 more)
lwip/: CMakeLists.txt
osal/: CMakeLists.txt  Osal.hpp
protobuf/: CMakeLists.txt
services/: CMakeLists.txt
upgrade/: CMakeLists.txt
(+2504 files in other folders)
