if (EMIL_HOST_BUILD)
    add_subdirectory(http)
    add_subdirectory(https)
    add_subdirectory(mdns)
    add_subdirectory(rpc)
    add_subdirectory(serial_net)
    add_subdirectory(serial_output)
    add_subdirectory(sntp)
    add_subdirectory(threading)
    add_subdirectory(websocket_client)
endif()
