if (EMIL_HOST_BUILD)
    add_subdirectory(http)
    add_subdirectory(mdns)
    add_subdirectory(rpc)
    add_subdirectory(serial_net)
    add_subdirectory(serial_output)
    add_subdirectory(sntp)
    add_subdirectory(threading)

    if (EMIL_INCLUDE_MBEDTLS)
        add_subdirectory(https)
        add_subdirectory(websocket_client)
    endif()
endif()
